preprocessed consumer fraud table

--- a/notebooks/exploration.ipynb
+++ b/notebooks/exploration.ipynb
@@ -94,7 +94,25 @@
     "transactions3 = spark.read.parquet(\".././data/transactions/transactions_20220228_20220828_snapshot\")\n",
     "\n",
     "transactions = transactions1.union(transactions2).union(transactions3)\n",
+    "\n",
     "transactions.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
+   "source": [
+    "transactions.write.mode('overwrite').parquet('.././data/transactions/total_transactions')"
    ]
   },
   {
