sent consumer fraud to curated level

--- a/notebooks/preprocessamisha.ipynb
+++ b/notebooks/preprocessamisha.ipynb
@@ -1524,28 +1524,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+-------+-----------+\n",
-      "|user_id|consumer_id|\n",
-      "+-------+-----------+\n",
-      "|   6228|    1242133|\n",
-      "+-------+-----------+\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "consumer_details.filter(F.col('user_id') == '6228').show()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 35,
    "metadata": {},
    "outputs": [],
@@ -1603,6 +1581,55 @@
    "source": [
     "referenced.filter(F.col('Referenced') == 0).show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------+--------------+-----------------+\n",
+      "|user_id|order_datetime|fraud_probability|\n",
+      "+-------+--------------+-----------------+\n",
+      "|   6228|    2021-12-19| 97.6298077657765|\n",
+      "|  21419|    2021-12-10|99.24738020302328|\n",
+      "|   5606|    2021-10-17|84.05825045251777|\n",
+      "|   3101|    2021-04-17|91.42192091901347|\n",
+      "|  22239|    2021-10-19|94.70342477508035|\n",
+      "|  16556|    2022-02-20|89.65663294494827|\n",
+      "|  10278|    2021-09-28|83.59136689427714|\n",
+      "|  15790|    2021-12-30|71.77065889280253|\n",
+      "|   5233|    2021-08-29|85.87123303878818|\n",
+      "|    230|    2021-08-28|86.28328808934151|\n",
+      "|  13601|    2021-12-26|83.13696487489679|\n",
+      "|   6383|    2021-09-15| 66.2676451623754|\n",
+      "|   3513|    2022-02-27|75.16981192247916|\n",
+      "|  18658|    2021-10-19|82.98609082999361|\n",
+      "|   5965|    2021-11-14|69.37164467869053|\n",
+      "|  18714|    2021-11-14|83.78813794627237|\n",
+      "|  22957|    2022-02-12|82.79065699075498|\n",
+      "|  20118|    2021-09-05|80.34030486265003|\n",
+      "|   6436|    2021-12-24|84.81618344606828|\n",
+      "|  17900|    2022-02-25|92.73262811161372|\n",
+      "+-------+--------------+-----------------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "consumer_fraud.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
