density graph of fraud prob

--- a/notebooks/preprocessamisha.ipynb
+++ b/notebooks/preprocessamisha.ipynb
@@ -1524,23 +1524,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
-    "@F.udf(LongType())\n",
+    "from pyspark.sql.types import BooleanType\n",
+    "@F.udf(BooleanType())\n",
     "def userID(x):\n",
     "    if (x not in userids):\n",
-    "        return 0\n",
+    "        return False\n",
     "    else:\n",
-    "        return 1\n",
+    "        return True\n",
     "    \n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1549,14 +1550,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------+--------------+-----------------+----------+\n",
+      "|user_id|order_datetime|fraud_probability|Referenced|\n",
+      "+-------+--------------+-----------------+----------+\n",
+      "|   6228|    2021-12-19| 97.6298077657765|      true|\n",
+      "|  21419|    2021-12-10|99.24738020302328|      true|\n",
+      "|   5606|    2021-10-17|84.05825045251777|      true|\n",
+      "|   3101|    2021-04-17|91.42192091901347|      true|\n",
+      "|  22239|    2021-10-19|94.70342477508035|      true|\n",
+      "|  16556|    2022-02-20|89.65663294494827|      true|\n",
+      "|  10278|    2021-09-28|83.59136689427714|      true|\n",
+      "|  15790|    2021-12-30|71.77065889280253|      true|\n",
+      "|   5233|    2021-08-29|85.87123303878818|      true|\n",
+      "|    230|    2021-08-28|86.28328808934151|      true|\n",
+      "|  13601|    2021-12-26|83.13696487489679|      true|\n",
+      "|   6383|    2021-09-15| 66.2676451623754|      true|\n",
+      "|   3513|    2022-02-27|75.16981192247916|      true|\n",
+      "|  18658|    2021-10-19|82.98609082999361|      true|\n",
+      "|   5965|    2021-11-14|69.37164467869053|      true|\n",
+      "|  18714|    2021-11-14|83.78813794627237|      true|\n",
+      "|  22957|    2022-02-12|82.79065699075498|      true|\n",
+      "|  20118|    2021-09-05|80.34030486265003|      true|\n",
+      "|   6436|    2021-12-24|84.81618344606828|      true|\n",
+      "|  17900|    2022-02-25|92.73262811161372|      true|\n",
+      "+-------+--------------+-----------------+----------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "referenced.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Stage 47:>                                                         (0 + 1) / 1]\r"
+      "[Stage 58:>                                                         (0 + 1) / 1]\r"
      ]
     },
     {
@@ -1579,7 +1622,7 @@
     }
    ],
    "source": [
-    "referenced.filter(F.col('Referenced') == 0).show()"
+    "referenced.filter(F.col('Referenced') == False).show()"
    ]
   },
   {
@@ -1626,10 +1669,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "consumer_fraud.write.mode('overwrite').parquet('.././data/curated/consumer_fraud')"
+   ]
   }
  ],
  "metadata": {
