writing to curated folder

--- a/notebooks/andy_preprocessing.ipynb
+++ b/notebooks/andy_preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,22 +15,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "your 131072x1 screen size is bogus. expect trouble\n",
-      "24/09/01 15:30:28 WARN Utils: Your hostname, Andy-PC resolves to a loopback address: 127.0.1.1; using 172.27.185.53 instead (on interface eth0)\n",
-      "24/09/01 15:30:28 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
-      "Setting default log level to \"WARN\".\n",
-      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "24/09/01 15:30:30 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Probably need to change this if your on MAC\n",
     "spark = (\n",
@@ -46,16 +33,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -99,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +175,7 @@
        "only showing top 20 rows"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +296,7 @@
        "only showing top 20 rows"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -395,6 +375,23 @@
     "test = merchant_fraud.withColumn(\"valid_abn\", validate_abn_udf(merchant_fraud[\"merchant_abn\"]))\n",
     "test = test.filter(F.col(\"valid_abn\") == True)\n",
     "test.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "if not os.path.exists('../data/curated/'):\n",
+    "    os.makedirs('../data/curated/')\n",
+    "    \n",
+    "if not os.path.exists('../data/curated/'):\n",
+    "    os.makedirs('../data/curated/')\n",
+    "\n",
+    "merchant_fraud.write.mode('overwrite').parquet(\"../data/curated/merchant_fraud\")\n",
+    "tbl_consumer.write.mode('overwrite').parquet(\"../data/curated/tbl_consumer\")"
    ]
   }
  ],
