--- a/notebooks/preprocessamisha.ipynb
+++ b/notebooks/preprocessamisha.ipynb
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1526,7 +1526,7 @@
        " ...]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1538,7 +1538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1555,7 +1555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1564,7 +1564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1598,6 +1598,13 @@
       "only showing top 20 rows\n",
       "\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
     }
    ],
    "source": [
@@ -1606,14 +1613,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Stage 58:>                                                         (0 + 1) / 1]\r"
+      "[Stage 35:>                                                         (0 + 1) / 1]\r"
      ]
     },
     {
@@ -1641,7 +1648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1683,11 +1690,370 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "consumer_fraud.write.mode('overwrite').parquet('.././data/curated/consumer_fraud')"
+    "#consumer_fraud.write.mode('overwrite').parquet('.././data/curated/consumer_fraud')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transactions = spark.read.parquet(\".././data/transactions/total_transactions\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------+------------+------------------+--------------------+--------------+\n",
+      "|user_id|merchant_abn|      dollar_value|            order_id|order_datetime|\n",
+      "+-------+------------+------------------+--------------------+--------------+\n",
+      "|  14935| 79417999332|136.06570809815838|23acbb7b-cf98-458...|    2021-11-26|\n",
+      "|      1| 46451548968| 72.61581642788431|76bab304-fa2d-400...|    2021-11-26|\n",
+      "|  14936| 89518629617|3.0783487174439297|a2ae446a-2959-41c...|    2021-11-26|\n",
+      "|      1| 49167531725| 51.58228625503599|7080c274-17f7-4cc...|    2021-11-26|\n",
+      "|  14936| 31101120643|25.228114942417797|8e301c0f-06ab-45c...|    2021-11-26|\n",
+      "|      2| 67978471888| 691.5028234458998|0380e9ad-b0e8-420...|    2021-11-26|\n",
+      "|  14936| 60956456424|102.13952056640888|5ac3da9c-5147-452...|    2021-11-26|\n",
+      "|      2| 47644196714| 644.5220654863093|4e368e44-86f8-4de...|    2021-11-26|\n",
+      "|  14938| 39649557865|209.12780951421405|4d78cd01-4bab-494...|    2021-11-26|\n",
+      "|      3| 88402174457| 141.0387993699113|c50c957d-ecfc-430...|    2021-11-26|\n",
+      "|  14938| 32234779638|102.04090324888061|e94ff357-b036-493...|    2021-11-26|\n",
+      "|      4| 24015173965|             157.0|5b867ac9-d1e0-430...|    2021-11-26|\n",
+      "|  14939| 79830510987|246.13590152514766|666909ed-79c2-45b...|    2021-11-26|\n",
+      "|      5| 76646764782|35.463129852951695|0c855413-67fa-467...|    2021-11-26|\n",
+      "|  14939| 17324645993|24.108258533478818|40fd2f7f-a274-420...|    2021-11-26|\n",
+      "|      5| 71041015148| 89.76800577775657|93255de9-c8fe-426...|    2021-11-26|\n",
+      "|  14939| 75089928159|14.806519329659501|2c5ba1f3-1c5a-4e5...|    2021-11-26|\n",
+      "|      5| 80324045558| 62.79195913018835|564f81c8-c3c1-4f4...|    2021-11-26|\n",
+      "|  14939| 50315283629| 575.3321071340728|026c6d3d-4f7c-4f4...|    2021-11-26|\n",
+      "|      6| 11566786699|15.856637357709419|0230e104-aef0-48f...|    2021-11-26|\n",
+      "+-------+------------+------------------+--------------------+--------------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "transactions.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------------------------------------+-----------------------------------------------------------------------------------------------------------------+------------+\n",
+      "|name                                |tags                                                                                                             |merchant_abn|\n",
+      "+------------------------------------+-----------------------------------------------------------------------------------------------------------------+------------+\n",
+      "|Felis Limited                       |((furniture, home furnishings and equipment shops, and manufacturers, except appliances), (e), (take rate: 0.18))|10023283211 |\n",
+      "|Arcu Ac Orci Corporation            |([cable, satellite, and otHer pay television and radio services], [b], [take rate: 4.22])                        |10142254217 |\n",
+      "|Nunc Sed Company                    |([jewelry, watch, clock, and silverware shops], [b], [take rate: 4.40])                                          |10165489824 |\n",
+      "|Ultricies Dignissim Lacus Foundation|([wAtch, clock, and jewelry repair shops], [b], [take rate: 3.29])                                               |10187291046 |\n",
+      "|Enim Condimentum PC                 |([music shops - musical instruments, pianos, and sheet music], [a], [take rate: 6.33])                           |10192359162 |\n",
+      "|Fusce Company                       |[(gift, card, novelty, and souvenir shops), (a), (take rate: 6.34)]                                              |10206519221 |\n",
+      "|Aliquam Enim Incorporated           |[(computers, comPUter peripheral equipment, and softwAre), (b), (take rate: 4.32)]                               |10255988167 |\n",
+      "|Ipsum Primis Ltd                    |[[watch, clock, and jewelry repair shops], [c], [take rate: 2.39]]                                               |10264435225 |\n",
+      "|Pede Ultrices Industries            |([computer programming , data processing, and integrated systems design services], [a], [take rate: 5.71])       |10279061213 |\n",
+      "|Nunc Inc.                           |[(furniture, home furnishings and equipment shopS, and manufacturers, except appliances), (a), (take rate: 6.61)]|10323485998 |\n",
+      "|Facilisis Facilisis Corp.           |([computers, computer peripheral equipment, and software], [a], [take rate: 6.34])                               |10342410215 |\n",
+      "|Odio Institute                      |((equipment, tool, furniture, and appliance  rent al and leAsing), (b), (take rate: 3.57))                       |10346855916 |\n",
+      "|Rutrum Justo Ltd                    |([music shops - musical instruments, pianos, and sheet music], [b], [take rate: 3.63])                           |10364012396 |\n",
+      "|Tellus Foundation                   |[[artist supply and craft  shops], [b], [take rate: 3.17]]                                                       |10385011947 |\n",
+      "|Sed Et Company                      |([florists supplies, nursery stock, and flowers], [a], [take rate: 6.61])                                        |10385163239 |\n",
+      "|Id Ltd                              |([computers, computer peripheral  equipment, and software], [a], [take rate: 5.54])                              |10385250025 |\n",
+      "|Consequat Foundation                |[[antique shops - sales, repairs, and restoration serVices], [a], [take rate: 6.93]]                             |10404542215 |\n",
+      "|Sit Amet Nulla Corp.                |[[motor vehicle supplies and new parts], [b], [take rate: 4.97]]                                                 |10430380319 |\n",
+      "|Massa Vestibulum Foundation         |[(moTor vehicle supplies and new parts), (a), (take rate: 5.77)]                                                 |10441711491 |\n",
+      "|Ut Consulting                       |([gift, card, novelty, and souvenir shops], [c], [take rate: 2.95])                                              |10462560289 |\n",
+      "+------------------------------------+-----------------------------------------------------------------------------------------------------------------+------------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "tbl_merchants = spark.read.parquet(\".././data/tables/tbl_merchants.parquet\")\n",
+    "tbl_merchants.show(truncate=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root\n",
+      " |-- name: string (nullable = true)\n",
+      " |-- tags: string (nullable = true)\n",
+      " |-- merchant_abn: string (nullable = true)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "tbl_merchants.printSchema()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tbl_merchants = tbl_merchants.withColumn('merchant_abn', F.col('merchant_abn').cast('string'))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4026"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tbl_merchants.select('merchant_abn').distinct().count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4026"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tbl_merchants.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4026"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tbl_merchants.select('name').distinct().count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tbl_merchants.filter(F.isnull('name')).count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tbl_merchants.filter(F.isnan('name')).count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tbl_merchants.filter(F.isnan('merchant_abn')).count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tbl_merchants.filter(F.isnull('merchant_abn')).count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------+------------+------------------+--------------------+--------------+\n",
+      "|user_id|merchant_abn|      dollar_value|            order_id|order_datetime|\n",
+      "+-------+------------+------------------+--------------------+--------------+\n",
+      "|  14935| 79417999332|136.06570809815838|23acbb7b-cf98-458...|    2021-11-26|\n",
+      "|      1| 46451548968| 72.61581642788431|76bab304-fa2d-400...|    2021-11-26|\n",
+      "|  14936| 89518629617|3.0783487174439297|a2ae446a-2959-41c...|    2021-11-26|\n",
+      "|      1| 49167531725| 51.58228625503599|7080c274-17f7-4cc...|    2021-11-26|\n",
+      "|  14936| 31101120643|25.228114942417797|8e301c0f-06ab-45c...|    2021-11-26|\n",
+      "|      2| 67978471888| 691.5028234458998|0380e9ad-b0e8-420...|    2021-11-26|\n",
+      "|  14936| 60956456424|102.13952056640888|5ac3da9c-5147-452...|    2021-11-26|\n",
+      "|      2| 47644196714| 644.5220654863093|4e368e44-86f8-4de...|    2021-11-26|\n",
+      "|  14938| 39649557865|209.12780951421405|4d78cd01-4bab-494...|    2021-11-26|\n",
+      "|      3| 88402174457| 141.0387993699113|c50c957d-ecfc-430...|    2021-11-26|\n",
+      "|  14938| 32234779638|102.04090324888061|e94ff357-b036-493...|    2021-11-26|\n",
+      "|      4| 24015173965|             157.0|5b867ac9-d1e0-430...|    2021-11-26|\n",
+      "|  14939| 79830510987|246.13590152514766|666909ed-79c2-45b...|    2021-11-26|\n",
+      "|      5| 76646764782|35.463129852951695|0c855413-67fa-467...|    2021-11-26|\n",
+      "|  14939| 17324645993|24.108258533478818|40fd2f7f-a274-420...|    2021-11-26|\n",
+      "|      5| 71041015148| 89.76800577775657|93255de9-c8fe-426...|    2021-11-26|\n",
+      "|  14939| 75089928159|14.806519329659501|2c5ba1f3-1c5a-4e5...|    2021-11-26|\n",
+      "|      5| 80324045558| 62.79195913018835|564f81c8-c3c1-4f4...|    2021-11-26|\n",
+      "|  14939| 50315283629| 575.3321071340728|026c6d3d-4f7c-4f4...|    2021-11-26|\n",
+      "|      6| 11566786699|15.856637357709419|0230e104-aef0-48f...|    2021-11-26|\n",
+      "+-------+------------+------------------+--------------------+--------------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "transactions.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root\n",
+      " |-- user_id: string (nullable = true)\n",
+      " |-- merchant_abn: string (nullable = true)\n",
+      " |-- dollar_value: double (nullable = true)\n",
+      " |-- order_id: string (nullable = true)\n",
+      " |-- order_datetime: date (nullable = true)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "transactions.printSchema()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transactions = transactions.withColumn('merchant_abn', F.col('merchant_abn').cast('string'))\n",
+    "transactions = transactions.withColumn('user_id', F.col('user_id').cast('string'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14195505"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "transactions.count()"
    ]
   }
  ],
