merchant preprocess combined

--- a/notebooks/consumer_preprocess.ipynb
+++ b/notebooks/consumer_preprocess.ipynb
@@ -385,11 +385,147 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----------------+-----+--------+-----------+-----------+\n",
+      "|    consumer_name|state|postcode|     gender|consumer_id|\n",
+      "+-----------------+-----+--------+-----------+-----------+\n",
+      "| Yolanda Williams|   WA|    6935|     Female|    1195503|\n",
+      "|       Mary Smith|  NSW|    2782|     Female|     179208|\n",
+      "|    Jill Jones MD|   NT|     862|     Female|    1194530|\n",
+      "|  Lindsay Jimenez|  NSW|    2780|     Female|     154128|\n",
+      "|Rebecca Blanchard|   WA|    6355|     Female|     712975|\n",
+      "|    Karen Chapman|  NSW|    2033|     Female|     407340|\n",
+      "|     Andrea Jones|  QLD|    4606|     Female|     511685|\n",
+      "| Stephen Williams|   WA|    6056|       Male|     448088|\n",
+      "|  Stephanie Reyes|  NSW|    2482|     Female|     650435|\n",
+      "| Jillian Gonzales|  VIC|    3220|     Female|    1058499|\n",
+      "|     Eugene Lucas|  VIC|    3063|Undisclosed|     428325|\n",
+      "|    Melissa Jones|   WA|    6743|     Female|    1494640|\n",
+      "| Angela Brown PhD|  QLD|    4673|     Female|    1146717|\n",
+      "|     Lance Butler|  VIC|    3332|       Male|    1343547|\n",
+      "|      Paul Abbott|  QLD|    4512|       Male|    1463076|\n",
+      "|       Tracy Hart|  NSW|    2452|       Male|    1356405|\n",
+      "|    Alyssa Wilson|  VIC|    3719|     Female|    1331093|\n",
+      "|  Michael Burnett|  NSW|    1109|       Male|      80965|\n",
+      "|Victoria Gonzalez|  TAS|    7276|     Female|    1226530|\n",
+      "|     James Norris|  VIC|    3234|Undisclosed|    1390367|\n",
+      "+-----------------+-----+--------+-----------+-----------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "tbl_consumer.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#"
+    "tbl_consumer.filter(F.isnull('consumer_name')).count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tbl_consumer.filter(F.isnull('gender')).count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tbl_consumer.filter(F.isnull('postcode')).count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tbl_consumer.filter(F.isnull('consumer_id')).count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tbl_consumer.filter(F.isnull('state')).count()"
    ]
   },
   {
